Updated github username

--- a/nvim/init.vim.bak.2
+++ b/nvim/init.vim.bak.2
@@ -8,7 +8,7 @@ Plug 'Raimondi/delimitMate'
 Plug 'plasticboy/vim-markdown'
 Plug 'junegunn/goyo.vim'
 Plug 'vim-pandoc/vim-pandoc'
-"Plug 'D3faIt/vim-rest-console'
+"Plug 'Aadniz/vim-rest-console'
 Plug 'scrooloose/nerdtree'
 Plug 'mg979/vim-visual-multi', {'branch': 'test'}
 Plug 'simrat39/rust-tools.nvim'
